# Markflow

./: .gitignore  AGENTS.md  CLAUDE.md  PRD.md  TECH_DESIGN.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
assets/: index-B7sF585x.js  index-BY2urf8i.js  index-C1Ve8OD9.css  index-C4lDuuOm.js  index-CgFtL7if.css
docs/: TEST_GUIDE.md  TEST_REPORT.md
src/: App.tsx  global.d.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src-tauri/src/commands/: config.rs  export.rs  fs.rs  mod.rs
src/components/Editor/: EditorToolbar.tsx  MarkdownEditor.tsx  index.ts
src/components/Export/: ExportDialog.tsx
src/components/Layout/: Header.tsx  Layout.tsx
src/components/Preview/: MarkdownPreview.test.tsx  MarkdownPreview.tsx  index.ts
src/components/Sidebar/: FileContextMenu.test.tsx  FileContextMenu.tsx  FileTree.test.tsx  FileTree.tsx  FileTreeNode.tsx  SearchPanel.tsx  Sidebar.tsx  index.ts
src/components/Tabs/: Tab.test.tsx  Tab.tsx  TabBar.test.tsx  TabBar.tsx
src/constants/: editor.ts  export.ts  shortcuts.ts
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useTheme.ts
src/store/: appStore.test.ts  appStore.ts  uiStore.ts
src/styles/: globals.css  markdown.css  print.css
src/types/: index.ts
src/utils/: cn.test.ts  configAdapter.ts  editorCommands.ts  env.ts  export.ts  fileTree.test.ts  fileTree.ts  fsAdapter.ts  markdown.test.ts  markdown.ts  search.ts  tauri.test.ts  tauri.ts
(+6 files in other folders)
