[package]
name = "markflow"
version = "0.1.0"
description = "MarkFlow markdown desktop editor"
authors = ["Claude"]
edition = "2021"

[lib]
name = "markflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
walkdir = "2.5"
sha1 = "0.10"
